[gd_scene load_steps=10 format=3 uid="uid://ln6v2ege33t7"]

[ext_resource type="Script" path="res://Map/ApplyItem.gd" id="1_ndx3b"]
[ext_resource type="PackedScene" uid="uid://cvmuwhverwiv0" path="res://Battle/UI/InBattleSummary.tscn" id="2_8p1vw"]
[ext_resource type="PackedScene" uid="uid://d1us7egl1mag1" path="res://Menus/TeamSlot.tscn" id="3_7s8co"]
[ext_resource type="Shader" path="res://Battle/UI/CreatureSlot.gdshader" id="3_edo11"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uaoo3"]
resource_local_to_scene = true
shader = ExtResource("3_edo11")
shader_parameter/outline_width = 3.0
shader_parameter/outline_color = null
shader_parameter/isSpectral = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bjud3"]
resource_local_to_scene = true
shader = ExtResource("3_edo11")
shader_parameter/outline_width = 3.0
shader_parameter/outline_color = null
shader_parameter/isSpectral = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j0by0"]
resource_local_to_scene = true
shader = ExtResource("3_edo11")
shader_parameter/outline_width = 3.0
shader_parameter/outline_color = null
shader_parameter/isSpectral = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8w1y4"]
resource_local_to_scene = true
shader = ExtResource("3_edo11")
shader_parameter/outline_width = 3.0
shader_parameter/outline_color = null
shader_parameter/isSpectral = false

[sub_resource type="Theme" id="Theme_o14bs"]
Button/font_sizes/font_size = 30

[node name="ApplyItem" type="ColorRect"]
offset_left = 379.0
offset_top = 308.0
offset_right = 1850.0
offset_bottom = 877.0
color = Color(0, 0.207843, 0.207843, 1)
script = ExtResource("1_ndx3b")

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Creatures2" type="VBoxContainer" parent="VBoxContainer2"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 0

[node name="TeamSlot2" parent="VBoxContainer2/Creatures2" instance=ExtResource("3_7s8co")]
material = SubResource("ShaderMaterial_uaoo3")
layout_mode = 2
size_flags_horizontal = 0

[node name="TeamSlot" parent="VBoxContainer2/Creatures2" instance=ExtResource("3_7s8co")]
material = SubResource("ShaderMaterial_bjud3")
layout_mode = 2
size_flags_horizontal = 0

[node name="TeamSlot3" parent="VBoxContainer2/Creatures2" instance=ExtResource("3_7s8co")]
material = SubResource("ShaderMaterial_j0by0")
layout_mode = 2
size_flags_horizontal = 0

[node name="TeamSlot4" parent="VBoxContainer2/Creatures2" instance=ExtResource("3_7s8co")]
material = SubResource("ShaderMaterial_8w1y4")
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "ADd the following asdfuasodfuiasodfu"
fit_content = true
scroll_active = false

[node name="Summary" parent="VBoxContainer2/VBoxContainer2" instance=ExtResource("2_8p1vw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = SubResource("Theme_o14bs")

[node name="Submit" type="Button" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply
"

[node name="Cancel" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Submit" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
